--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "sweet_tooth_hng11",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://api.timbu.cloud",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,6 +14,7 @@
     "@types/react-dom": "^18.3.0",
     "ajv": "^8.16.0",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "http-proxy-middleware": "^3.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
