--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.3.0",
     "ajv": "^8.16.0",
     "bootstrap": "^5.3.3",
+    "countries-list": "^3.1.0",
     "dotenv": "^16.4.5",
     "http-proxy-middleware": "^3.0.0",
     "react": "^18.3.1",
