--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_BASE_API_URL=https://api.timbu.cloud
+REACT_APP_BASE_API_URL=https://timbu-get-all-products.reavdev.workers.dev
 REACT_APP_API_KEY=325feb27c6014e1abe5ac5e4eb8d4abd20240712173607531803
 REACT_APP_APP_ID=9LADC27VNR5WFA0
 REACT_APP_ORGANIZATION_ID=5d70deeddde7471581db309ffc9c6144
